<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalObjeto_Activity"
    android:background="@color/FondoDePantalla">

    <!-- Views decorativos de la aplicación. -->
    <View
        android:id="@+id/view"
        android:layout_width="5dp"
        android:layout_height="match_parent"
        android:background="@color/Burdeo"
        tools:ignore="MissingConstraints" />
    <View
        android:layout_width="5dp"
        android:layout_height="match_parent"
        android:background="@color/Burdeo"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />
    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/Burdeo"
        tools:ignore="MissingConstraints" />
    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/Burdeo"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints" />
    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/Burdeo"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints" />
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/Burdeo"
        app:layout_constraintBottom_toTopOf="@+id/VINegro"/>
    <View
        android:id="@+id/VINegro"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/lisObjetos" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:src="@drawable/pokeball" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/black"
            android:fontFamily="@font/pokemon"
            android:letterSpacing="0.2"
            android:text="@string/pokewiki"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="37sp" />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:src="@drawable/pokeball" />
    </LinearLayout>

    <!-- Vista que agrupa los checkboxes utilizados para realizar búsqueda en la lista y así mostrar los objetos. -->
    <LinearLayout
        android:layout_marginTop="10dp"
        android:id="@+id/LLCheckboxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints">

        <CheckBox
            android:id="@+id/CBCuracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/peach"
            android:text="@string/curaci_n"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
        <CheckBox
            android:id="@+id/CBEvolucion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/peach"
            android:text="@string/evoluci_n"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
        <CheckBox
            android:id="@+id/CBPokeballs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/peach"
            android:text="@string/pokeballs"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <!-- Vista donde se muestra todos los objetos existentes en la aplicación. Cuándo los checkboxes son utilizados esta lista se refresca y muestra los objetos según el tipo pulsado. -->
    <ListView
        android:id="@+id/lisObjetos"
        android:layout_width="match_parent"
        android:layout_height="540dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@+id/LLCheckboxes"
        tools:layout_editor_absoluteX="5dp" />

    <!-- Vista que contiene los LinearLayout dispuestos para los 3 botones que te lanzan a las diferentes vistas de la aplicación. -->
    <LinearLayout
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:id="@+id/LLbajo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/view6"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/IBObjetos"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:background="@color/black"
                app:srcCompat="@drawable/iman"
                android:scaleType="fitCenter"/>
            <TextView
                android:layout_marginTop="-5dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/objetos"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/IBPokemon"
                android:padding="1dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:background="@color/black"
                app:srcCompat="@drawable/pokeball3d"
                android:scaleType="fitCenter"/>
            <TextView
                android:layout_marginTop="-5dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/pokemon"
                android:textAlignment="center"/>
        </LinearLayout>
<!--
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/IBVideo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:background="@color/black"
                android:padding="1dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/tele"
                tools:ignore="NestedWeights" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="-5dp"
                android:layout_weight="1"
                android:text="@string/extras"
                android:textAlignment="center" />
        </LinearLayout>-->
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>