<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VideoViewActivity"
    android:background="#F5DEB3">

    <View
        android:id="@+id/view"
        android:layout_width="5dp"
        android:layout_height="match_parent"
        android:background="#8F0000"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view8"
        android:layout_width="5dp"
        android:layout_height="match_parent"
        android:background="#8F0000"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />
    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#8F0000"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#8F0000"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:src="@drawable/pokeball" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/black"
            android:fontFamily="@font/pokemon"
            android:letterSpacing="0.2"
            android:text="POKEWIKI"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="37sp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:src="@drawable/pokeball" />
    </LinearLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#8F0000"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/TVTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pokemon"
        android:letterSpacing="0.1"
        android:text="Actualidad"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints" />

    <VideoView
        android:id="@+id/VVTrailer"
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVTitulo" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:indeterminate="true"
        android:minHeight="24dp"
        app:layout_constraintBottom_toTopOf="@+id/WVPagina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RatingBar
        android:background="@color/FondoDePantalla"
        android:id="@+id/simpleRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/LLbajo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <WebView
        android:id="@+id/WVPagina"
        android:layout_width="380dp"
        android:layout_height="280dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@+id/LLbajo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/VVTrailer" />

    <LinearLayout
        android:id="@+id/LLbajo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/IBObjetos"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:background="@color/black"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/iman"
                tools:ignore="NestedWeights" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="-5dp"
                android:layout_weight="1"
                android:text="@string/objetos"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/IBPokemon"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:background="@color/black"
                android:padding="1dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/pokeball3d"
                tools:ignore="NestedWeights" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="-5dp"
                android:layout_weight="1"
                android:text="@string/pokemon"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/IBVideo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:background="@color/black"
                android:padding="1dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/tele"
                tools:ignore="NestedWeights" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="-5dp"
                android:layout_weight="1"
                android:text="@string/extras"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>